--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           node-version: 14
       - run: yarn
+      - run: yarn test
       - run: yarn build
         env:
           GOOGLE_TRACKING_ID: ${{ secrets.GOOGLE_TRACKING_ID }}
