--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "d3-ease": "^1.0.6",
     "date-fns": "^2.15.0",
     "gatsby": "^2.23.12",
     "gatsby-background-image": "^1.1.1",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^3.4.1",
+    "@types/d3-ease": "^1.0.9",
     "@types/jest": "^26.0.7",
     "@types/react-helmet": "^6.1.0",
     "babel-jest": "^26.1.0",
