--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,7 @@ jobs:
       - run: yarn build
         env:
           GOOGLE_TRACKING_ID: ${{ secrets.GOOGLE_TRACKING_ID }}
+          GOOGLE_ADSENSE_ID: ${{ secrets.GOOGLE_ADSENSE_ID }}
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
