--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.14",
     "gatsby-plugin-emotion": "^4.3.10",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-react-helmet": "^3.3.10",
