--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-plugin-typescript": "^2.4.16",
     "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-remark-code-titles": "^1.1.0",
+    "gatsby-remark-plantuml": "^0.7.0",
     "gatsby-remark-prismjs": "^3.5.10",
     "gatsby-source-filesystem": "^2.3.23",
     "gatsby-transformer-remark": "^2.8.27",
